--- a/assets/newcss.css
+++ b/assets/newcss.css
@@ -393,8 +393,8 @@ img {
 
 /*===================== About ==================*/
 .about__img {
-  width: 170px;
-  border-radius: 500%;
+  width: 180px;
+  border-radius: 10px;
   justify-self: center;
   align-self: center;
   /* border: 1px solid #fff; */
